# PowerPlanManager

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  powerplanmanager.cfg
.github/workflows/: ci.yml
src/: config.cpp  config.h  constants.h  cpu.cpp  cpu.h  gpu.cpp  gpu.h  gui.cpp  gui.h  monitoring.cpp  monitoring.h  nvapi_inc_nvapi.h  nvapi_interface.h  power.cpp  power.h  resources.h  utils.cpp  utils.h  wmain.cpp
src/resources/: resources.rc
